syntax = "proto3";

// go get -u github.com/golang/protobuf/protoc-gen-go
// generate for GO: C:\Protoc\bin\protoc -I api api/publish-request.proto --go_out=plugins=grpc:api

package api;

service PublishRequest {
    rpc Publish(Request) returns (Response) {}
}

enum ArtifactKind {
    CronJob = 0;
    Deployment = 1;
}

message Request {
    string name           = 1;
    string namespace      = 2;
    ArtifactKind kind     = 3;
    string tier           = 4;
    bytes  docker_content = 5;
}

message Response {
    string image_name = 1;
    oneof response_variants {
        string image_version     = 2;
        string error_description = 3;
    }
}
